Added client side info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <a href="/client/meetups">Home</a>
+    <a href="/client/meetups/new">New Meetup</a>
+    <a href="/client"></a>
     <%= yield %>
   </body>
 </html>
