--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -767,7 +767,8 @@ MULTI LEVEL DROPDOWN CSS
 .slider-testimonials {
   padding-top: 80px;
   padding-bottom: 80px;
-  background-color: #000; }
+  background-color: #000;
+  background-image: "" }
   .slider-testimonials p {
     color: #fff;
     margin-bottom: 30px;
