--- a/public/assets/css/plugins/plugins.css
+++ b/public/assets/css/plugins/plugins.css
@@ -8226,11 +8226,11 @@ img.mfp-img {
   --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 
-*,
+/**,
 ::after,
 ::before {
   box-sizing: border-box;
-}
+}*/
 
 html {
   font-family: sans-serif;
