--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,6 +25,22 @@ body {
   color: #777;
   height: 100%; }
 
+  banner {
+      height: 100px;
+      width: 960px;
+      padding-bottom: 10px;
+  }
+
+  banner img {
+      border: none;
+      display: block;
+      margin: 0 auto;
+  }
+
+  .center-text {
+    text-align: center;
+  }
+
 a {
   text-decoration: none;
   -moz-transition: all 0.3s ease-in;
